# ulfiuspp

./: .gitignore  CMakeLists.txt  README.md
scripts/: update_version.py
src/: version.cpp
